# crupter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  push.yml
crupter-ffi/: Cargo.toml
crupter-ffi/src/: hash.rs  lib.rs  status_info.rs  status_read.rs
src/: args.rs  config.rs  handlers.rs  lib.rs  main.rs
src/ciphers/: cipher.rs  mod.rs  passphrase.rs
src/hashes/: hasher.rs  mod.rs
src/utils/: errors.rs  mod.rs  mustache.rs  parallel.rs  progress_read.rs
