[package]
name = "crupter"
version = "0.1.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesni = "0.6.0"
rust-crypto = "^0.2"
tokio = "0.1.22"
clap = {version = "2.33"}
colored = "1.8"
lazy_static = "1.4.0"
regex = "1.3.1"
