[package]
name = "crupter"
version = "0.2.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Crupter is a tool for file checksum and encryption."
homepage = "https://github.com/miguch/crupter"
repository = "https://github.com/miguch/crupter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-ctr = "0.3.0"
rust-crypto = "^0.2"
clap = {version = "2.33"}
lazy_static = "1.4.0"
regex = "1.3.1"
failure = "0.1.5"
digest = "0.8.1"
generic-array = "0.12.3"
sha-1 = "0.8.1"
sha2 = "0.8.0"
sha3 = "0.8.2"
md-5 = "0.8.0"
indicatif = "0.12.0"
num_cpus = "1.10"
rayon = "1.1"
block-cipher-trait = "0.6.2"
block-modes = "0.3.3"
hex-literal = "0.2.1"
dirs = "2.0.2"
stream-cipher = "0.3"
scrypt = "0.2.0"
rand = "0.7.1"
